--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:background="#000000"
-        android:visibility="visible">
-    </FrameLayout>
+        android:visibility="visible" />
 
     <TextClock
         android:id="@+id/central_clock"
