--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -1,140 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout android:id="@+id/status_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/status_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:gravity="center_horizontal"
     android:layout_gravity="center_horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    android:background="#000000"
+    android:gravity="center_horizontal">
 
     <Button
         android:id="@+id/leave_button"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="191dp"
         android:layout_height="128dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="visible"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/settings_button"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="191dp"
         android:layout_height="128dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:visibility="visible"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/free_label"
         style="@style/StatusLayoutStyle"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/free"
-        android:layout_alignParentTop="true"
         android:textColor="#ffffff"
         android:textSize="80sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/event_title"
-        style="@style/StatusLayoutStyle"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/event_title"
-        android:textColor="#ffffff"
-        android:textSize="64sp"
-        android:layout_below="@id/free_label"/>
-
-    <TextView
-        android:id="@+id/event_time"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        style="@style/StatusLayoutStyle"
-        android:text="@string/event_time"
-        android:textColor="#ffffff"
-        android:textSize="32sp"
-        android:layout_below="@id/event_title"/>
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="200dp"
-        android:background="#ffffff"
-        android:layout_below="@id/free_label" />
-
-    <TextView
-        android:id="@+id/next_label"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/next_event"
-        style="@style/StatusLayoutStyle"
-        android:textColor="#ffffff"
-        android:textSize="45sp"
-        android:textStyle="bold"
-        android:layout_below="@id/event_title"/>
-
-
-    <TextView
-        android:id="@+id/next_event_title"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/next_event_title"
-        style="@style/StatusLayoutStyle"
-        android:textColor="#ffffff"
-        android:textSize="36sp"
-        android:layout_below="@id/next_label"/>
-
-    <TextView
-        android:id="@+id/next_event_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        style="@style/StatusLayoutStyle"
-        android:text="@string/next_event_time"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:layout_below="@id/next_event_title"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/reserved_label"
         style="@style/StatusLayoutStyle"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/reserved"
-        android:layout_alignParentTop="true"
         android:textColor="#ffffff"
         android:textSize="80sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/event_title"
+        style="@style/StatusLayoutStyle"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/free_label"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/event_title"
+        android:textColor="#ffffff"
+        android:textSize="64sp" />
+
+    <TextView
+        android:id="@+id/event_time"
+        style="@style/StatusLayoutStyle"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/event_title"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/event_time"
+        android:textColor="#ffffff"
+        android:textSize="32sp" />
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/event_time"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="200dp"
+        android:background="#ffffff" />
+
+
+    <TextView
+        android:id="@+id/next_label"
+        style="@style/StatusLayoutStyle"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/separator"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/next_event"
+        android:textColor="#ffffff"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/next_event_title"
+        style="@style/StatusLayoutStyle"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/next_label"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/next_event_title"
+        android:textColor="#ffffff"
+        android:textSize="48sp" />
+
+    <TextView
+        android:id="@+id/next_event_time"
+        style="@style/StatusLayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/next_event_title"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/next_event_time"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="24sp" />
 
 </RelativeLayout>
