Begin work on SignInAPI

--- a/app/src/main/res/layout/fragment_quick_mode.xml
+++ b/app/src/main/res/layout/fragment_quick_mode.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:id="@+id/quick_mode_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,7 +57,8 @@
             app:layout_constraintStart_toStartOf="@+id/participants_list"
             app:layout_constraintTop_toBottomOf="@+id/event_name" />
 
-        <android.support.v7.widget.RecyclerView
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/participants_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -85,6 +86,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
