--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:layout_above="@id/bottom_navigation"
-        android:format12Hour="hh:mm a"
+        android:format24Hour="H:mm"
         android:textColor="#ffffff"
         android:textSize="45dp"
         android:textStyle="bold"
