--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,8 +7,8 @@
 
     <com.alamkanak.weekview.WeekView
         android:id="@+id/week_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         app:columnGap="1dp"
         app:eventCornerRadius="4dp"
@@ -17,11 +17,6 @@
         app:headerRowBottomLineWidth="1dp"
         app:headerRowPadding="12dp"
         app:hourHeight="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:nowLineColor="@color/accent"
         app:nowLineDotColor="@color/accent"
         app:nowLineDotRadius="5dp"
@@ -41,4 +36,4 @@
         app:timeColumnTextSize="12sp"
         app:todayHeaderTextColor="@color/accent" />
 
-</androidx.constraintlayout.ConstraintLayout>
+</LinearLayout>
