--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="CompanionStyle">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
