--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
+    android:padding="20dp"
     android:id="@+id/main_root"
     android:visibility="invisible">
+
+    <View android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/TextViewStyle"
+        android:textSize="48sp"
         android:text="Calendar ID:"/>
 
     <EditText
@@ -17,16 +23,44 @@
         android:hint="Google Calendar ID"
         android:id="@+id/id_et" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:text="Companion Mode"
-        android:id="@+id/companion_btn"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:text="Kiosk Mode"
-        android:id="@+id/kiosk_btn"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="128dp"
+            android:layout_height="88dp"
+            android:text="Kiosk Mode"
+            android:id="@+id/kiosk_btn"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="128dp"
+            android:layout_height="88dp"
+            android:text="Companion Mode"
+            android:id="@+id/companion_btn"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </LinearLayout>
