--- a/app/src/main/res/layout/location_view.xml
+++ b/app/src/main/res/layout/location_view.xml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="300dp"
-    android:layout_height="200dp"
-    android:layout_marginBottom="24dp"
-    card_view:cardCornerRadius="4dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="350dp"
+    android:layout_height="450dp"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:paddingTop="56dp">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
+
 
         <TextView
-            style="@style/CompanionStyle"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:layout_marginBottom="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/location_tv" />
+            style="@style/LocationFragmentHeaderStyle"
+            android:id="@+id/location_name"/>
 
         <TextView
-            style="@style/CompanionStyle"
+            android:layout_marginBottom="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/title_tv" />
+            style="@style/LocationFragmentStyle"
+            android:id="@+id/event_name" />
 
         <TextView
-            style="@style/CompanionStyle"
+            android:layout_marginBottom="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/time_tv" />
-
+            style="@style/LocationFragmentStyle"
+            android:id="@+id/event_time" />
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_delete"
+        android:layout_margin="16dp"
+        android:id="@+id/remove_fab" />
+
+</LinearLayout>
