--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
     </style>
 
     <style name="StatusLayoutStyle">
@@ -15,8 +16,31 @@
         <item name="android:textAlignment">center</item>
     </style>
 
-    <style name="CompanionStyle">
+    <style name="TextViewStyle" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+    </style>
+
+    <style name="LocationCardTextStyle">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="HeaderStyle">
+        <item name="android:textSize">72sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="LocationFragmentStyle" parent="@style/TextViewStyle">
+        <item name="android:textSize">48sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="LocationFragmentHeaderStyle" parent="@style/HeaderStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">64sp</item>
     </style>
 
 </resources>
