--- a/app/src/main/res/layout/location_view.xml
+++ b/app/src/main/res/layout/location_view.xml
@@ -1,47 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="450dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
     android:paddingTop="56dp">
-
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:background="@drawable/rounded_rectangle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:layout_gravity="center">
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"/>
 
         <TextView
-            android:layout_marginBottom="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/LocationFragmentHeaderStyle"
             android:id="@+id/location_name"/>
 
-        <TextView
-            android:layout_marginBottom="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/LocationFragmentStyle"
-            android:id="@+id/event_name" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"/>
 
-        <TextView
-            android:layout_marginBottom="8dp"
+        <ImageButton
+            android:background="?android:selectableItemBackground"
+            android:layout_gravity="end|center_vertical"
+            android:id="@+id/menu_ib"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/LocationFragmentStyle"
-            android:id="@+id/event_time" />
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_more_vert" />
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_delete"
-        android:layout_margin="16dp"
-        android:id="@+id/remove_fab" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/white"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"/>
 
+    <TextView
+        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        style="@style/LocationFragmentStyle"
+        android:id="@+id/event_name" />
+
+    <TextView
+        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        style="@style/LocationFragmentStyle"
+        android:id="@+id/event_time" />
 </LinearLayout>
