--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,8 +39,9 @@
     </style>
 
     <style name="LocationFragmentHeaderStyle" parent="@style/HeaderStyle">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">64sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">42sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
     <style name="SubHeaderStyle">
