--- a/app/src/main/res/layout/location_view.xml
+++ b/app/src/main/res/layout/location_view.xml
@@ -3,24 +3,18 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:paddingTop="56dp">
-    <LinearLayout
+    android:background="@color/white">
+
+    <RelativeLayout
         android:orientation="horizontal"
-        android:background="@drawable/rounded_rectangle"
+        android:background="@color/CSHComplement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="center"
-        android:layout_gravity="center">
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="7"/>
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:elevation="4dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,42 +22,40 @@
             style="@style/LocationFragmentHeaderStyle"
             android:id="@+id/location_name"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"/>
-
         <ImageButton
             android:background="?android:selectableItemBackground"
-            android:layout_gravity="end|center_vertical"
             android:id="@+id/menu_ib"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_more_vert" />
+            android:src="@drawable/ic_more_vert"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:orientation="vertical"
+        android:id="@+id/indicator">
+
+        <TextView
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            style="@style/LocationFragmentStyle"
+            android:id="@+id/event_name" />
+
+        <TextView
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            style="@style/LocationFragmentStyle"
+            android:id="@+id/event_time" />
+
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/white"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"/>
-
-    <TextView
-        android:layout_marginBottom="8dp"
-        android:layout_width="match_parent"
-        android:textAlignment="center"
-        android:layout_height="wrap_content"
-        style="@style/LocationFragmentStyle"
-        android:id="@+id/event_name" />
-
-    <TextView
-        android:layout_marginBottom="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        style="@style/LocationFragmentStyle"
-        android:id="@+id/event_time" />
 </LinearLayout>
