--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">42sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textAlignment">viewStart</item>
     </style>
 
     <style name="SubHeaderStyle">
