--- a/app/src/main/res/layout/fragment_quick_mode.xml
+++ b/app/src/main/res/layout/fragment_quick_mode.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:maxLength="100"
             android:text="@string/enter_event_title"
             android:textAlignment="center"
             android:textSize="40sp"
